<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/menu_bg">
	<CheckBoxPreference android:key="vibrate"
		android:title="@string/settings_vibration_title" android:summary="@string/settings_vibration_summary"
		android:defaultValue="true" android:listSelector="@drawable/list_selector" />
	<CheckBoxPreference android:key="music"
		android:title="@string/settings_music_title" android:summary="@string/settings_music_summary"
		android:defaultValue="true" android:listSelector="@drawable/list_selector" />
	<EditTextPreference android:key="player"
		android:name="Default user name" android:summary="@string/settings_user_name_summary"
		android:defaultValue="Memory player" android:title="@string/settings_user_name" />
</PreferenceScreen>
